--- a/css/style.css
+++ b/css/style.css
@@ -8,6 +8,10 @@
 body{
     background-color: #223;
 }
+header{
+    position: fixed;
+    width: 100%;
+}
 nav{
     width: 100%;
     height: 65px;
@@ -46,4 +50,22 @@ nav div.navbar_direita ul li a{
     border-radius: 50px;
     background-color: #fff;
     padding: 5px 1rem;
+}
+
+main{
+    display: block;
+    background-image: url("/img/discord_banner_placeholder.png");
+    height: 50rem;
+    background-size: 200%;
+    animation: move 120s linear infinite;
+}
+
+@keyframes move {
+    0%{
+        background-position-x: 50%;
+        background-position-y: 50% 
+    }
+    100%{
+        background-position: -2160px 100%;
+    }
 }
