--- a/css/style.css
+++ b/css/style.css
@@ -15,7 +15,7 @@ header{
 nav{
     width: 100%;
     height: 65px;
-    background-color: #000;
+    background-color: #13131f;
 }
 
 nav div{
@@ -34,9 +34,15 @@ nav div ul li{
     margin: 10px 16px;
 }
 nav div ul li a{
+    color: #888;
+
+}
+nav div ul li a:hover{
+    color: #bbb;
+}
+nav div ul li a:active{
     color: #fff;
 }
-
 nav div.navbar_direita{
     float: right;
 }
@@ -56,9 +62,9 @@ main{
     display: block;
     background-image: url("/img/discord_banner_placeholder.png");
     height: 50rem;
-    background-size: 100%;
+    background-size: 150%;
     animation: move 120s linear infinite;
-    padding: 15rem;
+    padding: 23% 25%;
     text-align: center;
 }
 
@@ -68,15 +74,17 @@ main{
         background-position-y: 50% 
     }
     100%{
-        background-position: -2160px 100%;
+        background-position: -2160px 200%;
     }
 }
 
 main form{
     display: grid;
     grid-template-columns: 3fr 1fr;
-    grid-template-rows: 3rem;
+    grid-template-rows: 3fr;
     gap: 20px;
+    margin-left: 1rem;
+    max-width: 660px;
 }
 main form h1{
     grid-column-start: 1;
