--- a/css/style.css
+++ b/css/style.css
@@ -4,7 +4,12 @@
     text-decoration: none;
     list-style: none;
     box-sizing: border-box;
+    color: #fff;
+
 }
+::placeholder { 
+    color: #fff;
+  }
 body{
     background-color: #223;
 }
@@ -89,7 +94,6 @@ main form{
 main form h1{
     grid-column-start: 1;
     grid-column-end: 3;
-    color: #fff;
     font-size: 55px;
     font-weight: bold;
 }
@@ -98,12 +102,13 @@ main form input{
     grid-column-start: 1;
     padding: 1rem;
     border-radius: 5px;
+    color: #fff;
+    
+    background-color: rgba(162, 162, 162, 0.707);
 }
 main form button{
     grid-column-start: 2;
     background-color: #558;
-    color: #fff;
-    font-weight: bold;
     font-size: 15px;
     padding: 1rem;
     border-radius: 5px;
@@ -112,9 +117,12 @@ main form a{
     grid-column-start: 1;
     grid-column-end: 3;
     background-color: #558;
-    color: #fff;
-    font-weight: bold;
     font-size: 20px;
     padding: 0.5rem 15rem;
     border-radius: 5px;
+}
+div.populares{
+    margin: 2rem 10rem;
+    display: block;
+    
 }
