--- a/css/style.css
+++ b/css/style.css
@@ -48,6 +48,18 @@ nav div ul li a:hover{
 nav div ul li a:active{
     color: #fff;
 }
+
+input{
+    padding: 1rem;
+    border-radius: 5px;
+    color: #fff;
+    background-color: rgba(162, 162, 162, 0.707);
+}
+nav div input{
+    margin: 0 200px;
+    height: 50px;
+    width: 500px;
+}
 nav div.navbar_direita{
     float: right;
 }
@@ -100,11 +112,6 @@ main form h1{
 
 main form input{
     grid-column-start: 1;
-    padding: 1rem;
-    border-radius: 5px;
-    color: #fff;
-    
-    background-color: rgba(162, 162, 162, 0.707);
 }
 main form button{
     grid-column-start: 2;
@@ -112,6 +119,7 @@ main form button{
     font-size: 15px;
     padding: 1rem;
     border-radius: 5px;
+    cursor: pointer;
 }
 main form a{
     grid-column-start: 1;
@@ -121,8 +129,43 @@ main form a{
     padding: 0.5rem 15rem;
     border-radius: 5px;
 }
+div{
+    padding: 15%;
+    text-align: center;
+}
+
+div h2{
+    font-size: 18px;
+    font-weight: 100;
+    margin: 2rem 0;
+}
+div h2 p{
+    margin: 1rem;
+}
 div.populares{
+    text-align:left;
+    padding: 0;
     margin: 2rem 10rem;
     display: block;
     
+}
+footer{
+    background-color: #000;
+    width: 100%;
+    height: 150px;
+    text-align: center;
+    padding: 40px;
+    font-size: 18px;
+}
+
+footer ul li{
+    display: inline-block;
+    margin: 10px;
+}
+
+footer ul li a{
+    color: #aab;
+}
+footer ul li a:hover{
+    color: #779;
 }
