--- a/css/style.css
+++ b/css/style.css
@@ -7,12 +7,14 @@
     color: #fff;
 
 }
+body{
+    background-color: #223;
+    font-family: sans-serif;
+}
 ::placeholder { 
     color: #fff;
   }
-body{
-    background-color: #223;
-}
+
 header{
     position: fixed;
     width: 100%;
@@ -51,9 +53,10 @@ nav div ul li a:active{
 
 input{
     padding: 1rem;
-    border-radius: 5px;
+    border-radius: 10px;
     color: #fff;
-    background-color: rgba(162, 162, 162, 0.707);
+    background-color: rgba(174, 174, 174, 0.751);
+    font-size: 20px;
 }
 nav div input{
     margin: 0 200px;
@@ -65,6 +68,7 @@ nav div.navbar_direita{
 }
 nav div.navbar_direita ul li{
     margin: 6px;
+    font-size: 16px;
 }
 
 nav div.navbar_direita ul li a{
@@ -72,7 +76,7 @@ nav div.navbar_direita ul li a{
     color: #000;
     border-radius: 50px;
     background-color: #fff;
-    padding: 5px 1rem;
+    padding: 7px 1.2rem;
 }
 
 main{
@@ -81,7 +85,7 @@ main{
     height: 50rem;
     background-size: 150%;
     animation: move 120s linear infinite;
-    padding: 23% 25%;
+    padding: 20% 23%;
     text-align: center;
 }
 
@@ -101,33 +105,35 @@ main form{
     grid-template-rows: 3fr;
     gap: 20px;
     margin-left: 1rem;
-    max-width: 660px;
+    max-width: 690px;
 }
 main form h1{
     grid-column-start: 1;
     grid-column-end: 3;
-    font-size: 55px;
+    font-size: 51px;
     font-weight: bold;
+    text-align: center justify;
 }
 
 main form input{
     grid-column-start: 1;
+    height: 60px;
 }
 main form button{
     grid-column-start: 2;
     background-color: #558;
-    font-size: 15px;
+    font-size: 18px;
     padding: 1rem;
-    border-radius: 5px;
+    border-radius: 10px;
     cursor: pointer;
 }
 main form a{
     grid-column-start: 1;
     grid-column-end: 3;
     background-color: #558;
-    font-size: 20px;
+    font-size: 18px;
     padding: 0.5rem 15rem;
-    border-radius: 5px;
+    border-radius: 10px;
 }
 div{
     padding: 15%;
