--- a/css/style.css
+++ b/css/style.css
@@ -4,30 +4,23 @@
     text-decoration: none;
     list-style: none;
     box-sizing: border-box;
-    color: #fff;
-
 }
 body{
     background-color: #223;
     font-family: sans-serif;
+    color: #fff;
 }
 ::placeholder { 
     color: #fff;
   }
 
-header{
-    position: fixed;
-    width: 100%;
-}
-nav{
-    width: 100%;
-    height: 65px;
-    background-color: #13131f;
-}
-
 .navbar{
     display: inline-flex;
     padding: 10px 25px;
+    position: fixed;
+    width: 100%;
+    height: 65px;
+    background-color: #13131f;
 }
 #check{
     display: none;
@@ -45,10 +38,6 @@ nav img{
     height: 55px;
     color: #fff;
 }
-.pc img{
-    margin-right: 10px;
-    height: 45px;
-}
 
 nav div ul li{
     display: inline-block;
@@ -60,10 +49,17 @@ nav div ul li a{
     color: #888;
 
 }
-nav div ul li a:hover{
+.pc{
+    display: inline-block;
+}
+.pc img{
+    height: 45px;
+    float: left;
+}
+.pc ul li a:hover{
     color: #bbb;
 }
-nav div ul li a:active{
+.pc ul li a:active{
     color: #fff;
 }
 
@@ -78,6 +74,9 @@ nav input{
     margin-left: 100px;
     height: 50px;
     width: 500px;
+}
+.left{
+    float: left;
 }
 .right{
     float: right;
