--- a/css/style.css
+++ b/css/style.css
@@ -15,8 +15,7 @@ body{
   }
 
 .navbar{
-    display: inline-flex;
-    padding: 10px 25px;
+    display: inline-block;
     position: fixed;
     width: 100%;
     height: 65px;
@@ -41,15 +40,14 @@ nav img{
 
 .navbar a{
     color: #888;
-
 }
 .pc{
-    display: inline-block;
+    overflow: hidden;
 }
 .pc img{
     height: 47px;
     float: left;
-    margin-right: 10px;
+    margin: 10px 10px 10px 25px;
 }
 .left a:hover{
     color: #bbb;
@@ -60,7 +58,6 @@ nav img{
 
 .pc ul a{
     display: inline-block;
-    margin: 10px 16px;
     font-size: 20px;
     font-weight: 500;
 }
@@ -80,7 +77,9 @@ nav input{
 .left{
     float: left;
 }
-
+.left a{
+    margin: 20px 16px;
+}
 .right{
     float: right;
 }
@@ -90,8 +89,7 @@ nav input{
 }
 
 .right a{
-    margin: 6px;
-
+    margin: 15px 30px;
     display: block;
     color: #000;
     border-radius: 50px;
@@ -181,10 +179,6 @@ main form a{
     font-size: 18px;
     padding: 0.5rem 15rem;
     border-radius: 10px;
-}
-div{
-    padding: 15%;
-    text-align: center;
 }
 
 div h2{
