--- a/css/style.css
+++ b/css/style.css
@@ -4,6 +4,7 @@
     text-decoration: none;
     list-style: none;
     box-sizing: border-box;
+    border-style: none;
 }
 body{
     background-color: #223;
@@ -59,7 +60,7 @@ nav{
 /*barra de pesquisa*/
 input{
     padding: 1rem;
-    border-radius: 5px;
+    border-radius: 8px;
     border: none;
     outline: 0;
     color: #fff;
@@ -133,80 +134,97 @@ input#check:checked ~ .mobile{
 .mobile a:hover{
     background-color: #334;
 }
-
-main{
+/*Conteúdo principal - campo de pesquisa*/
+.searchField{
     display: block;
     background-image: url("/img/discord_banner_placeholder.png");
-    background-size: cover;
-    height: 50rem;
-    background-size: 150%;
+    height: 110vh;
     animation: move 120s linear infinite;
-    padding: 20% 23%;
+    padding: 45vh 0;
     text-align: center;
+    overflow: hidden;
 }
-
+/*Animação de fundo*/
 @keyframes move {
     0%{
         background-position-x: 50%;
-        background-position-y: 50% 
+        background-position-y: 100% 
     }
     100%{
         background-position: -2160px 200%;
     }
 }
 
-main form{
+/*Form pesquisa pagina principal*/
+.searchField form{
     display: grid;
     grid-template-columns: 3fr 1fr;
     grid-template-rows: 3fr;
-    gap: 20px;
-    margin-left: 1rem;
-    max-width: 690px;
+    gap: 15px;
+    margin: auto;
+    width: 700px;
 }
-main form h1{
+.searchField form h1{
     grid-column-start: 1;
     grid-column-end: 3;
-    font-size: 51px;
+    font-size: 49px;
     font-weight: bold;
+    font-family:Georgia, 'Times New Roman', Times, serif;
     text-align: center justify;
+    margin-bottom: 20px;
 }
 
-main form input{
+.searchField form input{
     grid-column-start: 1;
     height: 60px;
 }
-main form button{
+.searchField form button{
     grid-column-start: 2;
-    background-color: #558;
+    background-color: rgb(101, 106, 146);
+    color: #fff;
     font-size: 18px;
     padding: 1rem;
-    border-radius: 10px;
+    border-radius: 8px;
     cursor: pointer;
 }
-main form a{
+.searchField form a{
     grid-column-start: 1;
     grid-column-end: 3;
-    background-color: #558;
+    background-color: rgb(101, 106, 146);
+    color: #fff;
     font-size: 18px;
     padding: 0.5rem 15rem;
-    border-radius: 10px;
+    border-radius: 8px;
 }
 
-div h2{
+.populares{
+    text-align:left;
+    padding: 0;
+    margin: 20px;
+    margin-left: 12vw;
+    display: block;
+    
+}
+/*Campo main sobre*/
+section{
+    text-align: center;
+    padding: 160px 50px 0 50px;
+    max-width: 1200px;
+    margin: auto;
+}
+main h2{
+    font-size: 32px;
+}
+section h2{
+    padding-top: 40px;
+}
+section p{
     font-size: 18px;
     font-weight: 100;
     margin: 2rem 0;
 }
-div h2 p{
-    margin: 1rem;
-}
-div.populares{
-    text-align:left;
-    padding: 0;
-    margin: 2rem 10rem;
-    display: block;
-    
-}
+
+/*Footer*/
 footer{
     background-color: #000;
     width: 100%;
@@ -216,17 +234,19 @@ footer{
     font-size: 18px;
 }
 
-footer ul li{
+footer li{
     display: inline-block;
     margin: 10px;
 }
 
-footer ul li a{
+footer a{
     color: #aab;
 }
-footer ul li a:hover{
+footer a:hover{
     color: #779;
 }
+
+/*Responsividade*/
 @media (max-width: 1000px){
     .checkbtn{
         display: inline-block;
