--- a/css/style.css
+++ b/css/style.css
@@ -157,17 +157,18 @@ input#check:checked ~ .mobile{
 
 /*Form pesquisa pagina principal*/
 .searchField form{
-    display: grid;
-    grid-template-columns: 3fr 1fr;
-    grid-template-rows: 3fr;
+    display: flex;
+    flex-direction: column;
     gap: 15px;
     margin: auto;
-    width: 700px;
+    padding: 0 20px;
+    max-width: 760px;
+}
+.searchGroup{
+    display: inline-flex;
 }
 .searchField form h1{
-    grid-column-start: 1;
-    grid-column-end: 3;
-    font-size: 49px;
+    font-size: 50px;
     font-weight: bold;
     font-family:Georgia, 'Times New Roman', Times, serif;
     text-align: center justify;
@@ -175,21 +176,20 @@ input#check:checked ~ .mobile{
 }
 
 .searchField form input{
-    grid-column-start: 1;
     height: 60px;
+    margin-right: 15px;
+    width: 75%;
 }
 .searchField form button{
-    grid-column-start: 2;
     background-color: rgb(101, 106, 146);
     color: #fff;
     font-size: 18px;
     padding: 1rem;
     border-radius: 8px;
     cursor: pointer;
+    width: 25%;
 }
 .searchField form a{
-    grid-column-start: 1;
-    grid-column-end: 3;
     background-color: rgb(101, 106, 146);
     color: #fff;
     font-size: 18px;
@@ -231,7 +231,7 @@ footer{
     height: 150px;
     text-align: center;
     padding: 40px;
-    font-size: 18px;
+    font-size: 16px;
 }
 
 footer li{
@@ -261,10 +261,10 @@ footer a:hover{
        display: none;
     }
     .searchField form{
-        width: 500px;
+        max-width: 500px;
     }
     .searchField form h1{
-        font-size: 35px;
+        font-size: 32px;
     }
     .searchField form a{
         padding: 1rem 0;
